# test_bno080_ehal

./: Cargo.toml  README.md  build.rs  openocd.cfg  segger.gdb  start_gdb_server_jlink.sh
src/: main.rs  peripherals_nrf52.rs  peripherals_stm32.rs  peripherals_stm32f3x.rs  peripherals_stm32f4x.rs  peripherals_stm32h7x.rs
